Wrapped some additional CUDA calls so that they don't appear in main ComEx files.

--- a/comex/CMakeLists.txt
+++ b/comex/CMakeLists.txt
@@ -47,9 +47,9 @@ if (MPI_TS)
   include_directories(AFTER src-mpi)
 elseif (MPI_PR)
   if (ENABLE_CUDA)
-    message(STATUS "Setting Compiler for utils.cu to CUDA")
+    message(STATUS "Setting Compiler for dev_utils.cu to CUDA")
     set(COMEX_CUDA_DEVICE
-      src-mpi-pr/utils.cu
+      src-mpi-pr/dev_utils.cu
     )
     set(COMEX_DEVICE
       src-mpi-pr/comex.c
